...
                horizontalArrangement = Arrangement.SpaceBetween
            ) {
                Column(
                    verticalArrangement = Arrangement.Center
                ) {
                    Text(
                        modifier = Modifier.testTag("tasks"),
                        text = "Tasks",
                        style = MaterialTheme.typography.headlineMedium
                    )
                    if (uiState.tasks.isNotEmpty()) {
                        val text = if (uiState.lastSyncTime == null) "No sync history" else
                            "Last Synced ${uiState.lastSyncTime}"
...
                }
            }
        },
        floatingActionButton = {
            FloatingActionButton(
                onClick = onClickAddTask,
                modifier = Modifier.testTag("add_task")
            ) {
                Icon(
                    imageVector = Icons.Default.Add,
                    contentDescription = "Add Task"
                )
            }
...
